--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             let info = document.getElementById("sendit").value
             let ret = "";
             console.log("r "+info);
-            fetch("https://https://pasteback-production.up.railway.app/new", {
+            fetch("https://pasteback-production.up.railway.app/new", {
             method: "POST",
             body: JSON.stringify({
                 "text": info,
@@ -99,7 +99,7 @@
             let info = document.getElementById("getit").value
             let ret = "";
             console.log("r "+info);
-            fetch("http://https://pasteback-production.up.railway.app/ret/"+info, {
+            fetch("https://pasteback-production.up.railway.app/ret/"+info, {
             method: "get",
             
             headers: {
