--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
         <input type="text" id="sendit" placeholder="Enter information">
         <button onclick="send_it()">OK</button>
     </div>
+    <div class="container">
+        <h2>Information</h2>
+        Content is only saved for about 1 minute and are deleted once read.
+        The content is not encrypted on the server
+    </div>
 
     <script>
         function send_it(){
