--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h1 id="bigone">PasteBack</h1>
     <div class="container">
         <h2>Get Information</h2>
-        <input type="text" id="getit" placeholder="Enter information">
+        <input type="text" id="getit" placeholder="Enter code">
         <button onclick="get_it()">OK</button>
     </div>
     <div class="container">
@@ -78,8 +78,9 @@
     </div>
     <div class="container">
         <h2>Information</h2>
-        Content is only saved for about 1 minute and are deleted once read.
-        The content is not encrypted on the server
+        Content is only saved for about 1 minute, and is deleted after being retrieved. Note that the content is not encrypted on the server.
+
+
     </div>
 
     <script>
@@ -87,7 +88,7 @@
             let info = document.getElementById("sendit").value
             let ret = "";
             console.log("r "+info);
-            fetch("https://pasteback-production.up.railway.app/new", {
+            fetch("./new", {
             method: "POST",
             body: JSON.stringify({
                 "text": info,
@@ -104,7 +105,7 @@
             let info = document.getElementById("getit").value
             let ret = "";
             console.log("r "+info);
-            fetch("https://pasteback-production.up.railway.app/ret/"+info, {
+            fetch("./ret/"+info, {
             method: "get",
             
             headers: {
